...
import 'package:flutter_gen/gen_l10n/app_localizations.dart';

import 'package:spotify_quiz/utility/utilities.dart' as utilities;

class PlayButtonTablet extends StatefulWidget {
   String selectedMode;
   PlayButtonTablet({ required this.selectedMode,Key? key}) : super(key: const Key("TabletPlayButtonInfoPage"));

  @override
  State<PlayButtonTablet> createState() => _PlayButtonTabletState();
}

class _PlayButtonTabletState extends State<PlayButtonTablet> {
...
