...
  }) : super(key: const Key("TabletQuizPage"));

  @override
  Widget build(BuildContext context) {
    final pages = [
      GameInfoScreenTablet(
        key: Key("gameInfoPageA"),
        text: AppLocalizations.of(context)!.gameinfoartist,
        urlImage: 'assets/images/singer.jpg',
        selectedMode: selectedGame,
      ),
      GameInfoScreenTablet(
        key: Key("gameInfoPageB"),
...
