...
  const QuizTablet(
      {Key? key,
      required this.questions,
      required this.answerQuestion,
      required this.questionIndex,
      required this.isRandom})
      : super(key: const Key("QuizScreenPageTablet"));

  @override
  Widget build(BuildContext context) {
    if (questions![questionIndex]["type"] == "A") {
      return QuizAtablet(
        questions: questions,
...
